# plc-learn

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: config.json
include/: common.h  data_collector.h  data_simulator.h  database_manager.h  device.h
scripts/: start.sh  stop.sh
src/cpp/: common.cpp  data_collector.cpp  data_simulator.cpp  device.cpp  main.cpp
src/database/: database_manager.cpp
src/modbus/: modbus_device.cpp  modbus_device.h
src/socket/: socket_device.cpp  socket_device.h
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
